Edited product desc

--- a/index.html
+++ b/index.html
@@ -134,10 +134,9 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
-        </div>
-      </div> 
-      <div class="row-fluid subheading">
+          <h1>Cozy Move</h1>
+	</div>
+	<div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
