--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +9,16 @@
   <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
   <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
   <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-43060269-1', 'irfanerol.com');
+  ga('send', 'pageview');
+
+  </script>
   <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
   rel="stylesheet" type="text/css">
@@ -129,24 +138,21 @@ p {
     </div>
     <div class="row-fluid subheading">
       <div class="span12">
-        <!-- Special typography from Bootstrap for lead paragraph. -->
-        <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
         <p class="lead">Guides you through relocation plans.</p>
       </div>
     </div>
     <div class="row-fluid pitch">
       <div class="span5 offset1 video">
-        <img class="img-polaroid" src="img/cozymove.png">
+        <img class="img-polaroid" src="img/cozymove.png" alt="cozy move logo">
       </div>
 
-      <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
+      
       <div class="span5 actions">
-        <div class="span8 offset2">
-          <div class="statistics">
-            <div class="span4">
-                <!-- linediv-l and linediv-r give dividing lines that look
-                different in horizontal and vertical layouts, illustrating
-                media queries. -->
+        <div class="row-fluid">
+          <div class="span8 offset2">
+            <div class="statistics">
+              <div class="span4">
+                
                 <div class="linediv-l">
                   <h3>1000</h3> <p>backers</p>
                 </div>
@@ -163,101 +169,88 @@ p {
               </div>
             </div>
           </div>
-          <div class="span10 offset1">
-            <!-- Bootstrap progress bar -->
-            <!-- http://twitter.github.io/bootstrap/components.html#progress -->
-            <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%;"></div>
-              <div class="bar bar-warning" style="width: 40%;"></div>
-            </div>
-          </div>
-          <div class="span6 offset3 order">
-            <!-- Standard Bootstrap button. -->
-            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
-          </div>
-          <div class="span8 offset2 social">
-            <!-- Social buttons are not included in default Bootstrap. -->
-            <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
-          </div>
         </div>
-      </div>
-
-      <!-- Beyond this part the marketing copy begins. -->
-      <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
-      <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
-      <!-- http://placehold.it -->
-      <div class="row-fluid section1">
-        <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
-        </div>
-        <div class="span5 copy">
-          <p>
-            Cozy Move is a perfect tool for the people who wants to relocate to a different place. It will give you the personalized results based on your family's characteristics. Assume you have a family of two children and a spouse. You all have different characteristics. You have a job, your spouse loves to ride a bike and your children should attend to school.
-            Using Cozy Move, you have a chance to define the requirements for each individual and application will show the different options for you ordered by suitability. You can also use the application as a person living alone. Just select where do you want to live and enter your expectations, application will take care of the rest and give you the personalized results.
-          </p>
-        </div>
-      </div>
-      <div class="row-fluid section2">
-        <div class="span5 offset1 copy copy-right">
-          <p>
-            Cozy Move is also a perfect tool for homeowners. Once you added your house for rent/sale, tool will display the nearby locations to you. If there are missing important places you want to show off, you can add those immediately with location adding feature.Cozy Move will have two languages (English and Turkish) in its initial release. After that it will cover more languages. It will also show you the possible moving expenses based on your geolocation and places to order food based on the reviews of other people for the first couple nights if you wish. Ultimately, Cozy Move is a tool for people who wants to relocate without trouble. For more info, you can visit FAQ below or contact me directly.
-          </p>
-        </div>
-        <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
-        </div>
-      </div>
-
-      <div class="row-fluid faq">
         <div class="span10 offset1">
-          <h3>FAQ</h3>
-          <div class="accordion" id="accordion2">
-            <div class="accordion-group">
-              <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse"
-                data-parent="#accordion2" href="#collapseOne">
-                Which platforms will Cozy Move support?
-              </a>
-            </div>
-            <div id="collapseOne" class="accordion-body collapse">
-              <div class="accordion-inner">
-                It will run both desktop (PC/Mac) and mobile (Android/iPhone/iPad) platforms since it will be a web application
-              </div>
-            </div>
+          <div class="thermometer progress active">
+            <div class="bar bar-success" style="width: 60%;"></div>
+            <div class="bar bar-warning" style="width: 40%;"></div>
           </div>
+        </div>
+        <div class="span6 offset3 order">
+          <button class="btn btn-success btn-large">Preorder</button>
+        </div>
+        <div class="span8 offset2 social">
+          <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+          <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+        </div>
+      </div>
+    </div>
+    <div class="row-fluid section1">
+      <div class="span5 offset1 asset">
+        <img class="img-polaroid" src="http://placehold.it/480x300" alt="place holder">
+      </div>
+      <div class="span5 copy">
+        <p>
+          Cozy Move is a perfect tool for the people who wants to relocate to a different place. It will give you the personalized results based on your family's characteristics. Assume you have a family of two children and a spouse. You all have different characteristics. You have a job, your spouse loves to ride a bike and your children should attend to school.
+          Using Cozy Move, you have a chance to define the requirements for each individual and application will show the different options for you ordered by suitability. You can also use the application as a person living alone. Just select where do you want to live and enter your expectations, application will take care of the rest and give you the personalized results.
+        </p>
+      </div>
+    </div>
+    <div class="row-fluid section2">
+      <div class="span5 offset1 copy copy-right">
+        <p>
+          Cozy Move is also a perfect tool for homeowners. Once you added your house for rent/sale, tool will display the nearby locations to you. If there are missing important places you want to show off, you can add those immediately with location adding feature.Cozy Move will have two languages (English and Turkish) in its initial release. After that it will cover more languages. It will also show you the possible moving expenses based on your geolocation and places to order food based on the reviews of other people for the first couple nights if you wish. Ultimately, Cozy Move is a tool for people who wants to relocate without trouble. For more info, you can visit FAQ below or contact me directly.
+        </p>
+      </div>
+      <div class="span5 asset">
+        <img class="img-polaroid" src="http://placehold.it/480x300" alt="place holder">
+      </div>
+    </div>
+
+    <div class="row-fluid faq">
+      <div class="span10 offset1">
+        <h3>FAQ</h3>
+        <div class="accordion" id="accordion2">
           <div class="accordion-group">
             <div class="accordion-heading">
               <a class="accordion-toggle" data-toggle="collapse"
-              data-parent="#accordion2" href="#collapseTwo">
-              Will there be an API for developers to integrate it onto their systems?
+              data-parent="#accordion2" href="#collapseOne">
+              Which platforms will Cozy Move support?
             </a>
           </div>
-          <div id="collapseTwo" class="accordion-body collapse">
+          <div id="collapseOne" class="accordion-body collapse">
             <div class="accordion-inner">
-              API might not be available on its initial release. But next release will have an public API as well surely.
+              It will run both desktop (PC/Mac) and mobile (Android/iPhone/iPad) platforms since it will be a web application
             </div>
+          </div>
+        </div>
+        <div class="accordion-group">
+          <div class="accordion-heading">
+            <a class="accordion-toggle" data-toggle="collapse"
+            data-parent="#accordion2" href="#collapseTwo">
+            Will there be an API for developers to integrate it onto their systems?
+          </a>
+        </div>
+        <div id="collapseTwo" class="accordion-body collapse">
+          <div class="accordion-inner">
+            API might not be available on its initial release. But next release will have an public API as well surely.
           </div>
         </div>
       </div>
     </div>
-
   </div>
 
-  <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
-  <!-- http://creativecommons.org/licenses/ -->
-  <div class="row-fluid footer">
-    <div class="span12">
-      <p>This work is licensed under
-        the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
-        By-SA 3.0
-      </a>, without all the cruft that would otherwise be
-      put at the bottom of the page.</p>
-    </div>
+</div>
+
+<div class="row-fluid footer">
+  <div class="span12">
+    <p>This work is licensed under
+      the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
+      By-SA 3.0
+    </a>, without all the cruft that would otherwise be
+    put at the bottom of the page.</p>
   </div>
+</div>
 </div>
 </body>
 </html>
-
