Added html5 valid logo

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                 </div>
                                 <div id="collapseOne" class="accordion-body collapse">
                                     <div class="accordion-inner">
-                                        It will run both desktop (PC/Mac) and mobile (Android/iPhone/iPad) platforms since it will be a web application
+                                        It will run on both desktop (PC/Mac) and mobile (Android/iPhone/iPad) platforms since it will be a web application
                                     </div>
                                 </div>
                             </div>
@@ -253,6 +253,10 @@
                     <div class="span12">
                         <p>
                             This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a> , without all the cruft that would otherwise be put at the bottom of the page.
+                        </p>
+                        <p>
+                          <a href=""></a>
+                          <img class="img-polaroid" src="img/valid_html5.png" alt="HTML5 Valid" title="This website is HTML5 valid">
                         </p>
                     </div>
                 </div>
