--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             </div>
                         </div>
                         <div class="span6 offset3 order">
-                            <button class="btn btn-success btn-large">Preorder</button>
+                           <a class="coinbase-button" data-code="c42e5598a043e57855c2ebf3c64cf91f" data-button-style="custom_large" href="https://coinbase.com/checkouts/c42e5598a043e57855c2ebf3c64cf91f" data-button-text="Preorder With Bitcoin">Preorder With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
                         </div>
                         <div class="span8 offset2 social">
                             <!-- AddThis Button BEGIN -->
